--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
   "payment": {
     "gopay": {
       "nomer": "08817839722",
-      "atas_nama": "Ronzz Ofc"
+      "atas_nama": "Ronz Ofc"
     },
     "dana": {
       "nomer": "628817839722",
